--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,20 +4,19 @@ on:
     branches:
       - master
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
+      - uses: actions/checkout@v2
+
       - name: Install Dependencies
         run: npm install
+
       - name: Build
         run: npm run build
-      - name: Deploy
+
+      - name: upload to server
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.SERVER}}
